fix feed reversing issue, align comments properly

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -5,6 +5,8 @@
 .comment-author {
   margin-left: 12px;
   font-weight: 600;
+  text-transform: lowercase;
+  padding-right: 5px;
 }
 
 .comment-body {
